# rust

./: .gitignore  bootstrap.example.toml  bootstrap.toml  config.toml  hi  hi.meow  meow  meow.logs1  meow.logs2  meow.logs3  meow.logs4  meow.logs5  meow.logs6  meow.logs7  meow.logs9  meowmeow.txt1  meowmeow.txt2  x.mtx  x.txtt  x2.txtt  xxxx.txt  xxxxx.x  xxxxx.x11  xxxxx.x13  xxxxx.x2  xxxxx.x3  xxxxx.x4  xxxxx.x8
compiler/rustc_builtin_macros/src/: cfg.rs  cmdline_attrs.rs  compile_error.rs  errors.rs
compiler/rustc_codegen_cranelift/: Cargo.toml
compiler/rustc_codegen_gcc/: Cargo.toml
compiler/rustc_codegen_ssa/: Cargo.toml
compiler/rustc_data_structures/: Cargo.toml
compiler/rustc_data_structures/src/: sync.rs
compiler/rustc_driver/: Cargo.toml
compiler/rustc_driver_impl/: Cargo.toml
compiler/rustc_driver_impl/src/: lib.rs
compiler/rustc_errors/: Cargo.toml
compiler/rustc_errors/src/: diagnostic_builder.rs
compiler/rustc_fluent_macro/: Cargo.toml
compiler/rustc_hir_typeck/: Cargo.toml
compiler/rustc_index_macros/: Cargo.toml
compiler/rustc_interface/: Cargo.toml
compiler/rustc_interface/src/: interface.rs  lib.rs  passes.rs
compiler/rustc_lint/: Cargo.toml  build.rs
compiler/rustc_lint/src/: builtin.rs  check_proc_macro.rs  context.rs  early.rs  late.rs  levels.rs  lib.rs  passes.rs  types.rs  unit_bindings.rs  unused.rs
compiler/rustc_lint_defs/src/: lib.rs
compiler/rustc_macros/: Cargo.toml
compiler/rustc_metadata/: Cargo.toml
compiler/rustc_middle/: Cargo.toml
compiler/rustc_middle/src/: lint.rs
compiler/rustc_monomorphize/src/: partitioning.rs
compiler/rustc_parse/src/: lib.rs  validate_attr.rs
compiler/rustc_sanitizers/: Cargo.toml
compiler/rustc_serialize/: Cargo.toml
compiler/rustc_session/src/: config.rs  options.rs  parse.rs  session.rs
compiler/rustc_span/: Cargo.toml
compiler/rustc_span/src/: hygiene.rs  symbol.rs
compiler/rustc_target/: Cargo.toml
compiler/rustc_type_ir_macros/: Cargo.toml
src/bootstrap/: Cargo.toml
src/librustdoc/: Cargo.toml  lint.rs
src/tools/build-manifest/: Cargo.toml
src/tools/clippy/: Cargo.toml
src/tools/clippy/clippy_config/: Cargo.toml
src/tools/clippy/clippy_config/src/: conf.rs  lib.rs  msrvs.rs  types.rs
src/tools/clippy/clippy_lints/: Cargo.toml
src/tools/clippy/clippy_lints/src/: absolute_paths.rs  allow_attributes.rs  almost_complete_range.rs  approx_const.rs  arbitrary_source_item_ordering.rs  arc_with_non_send_sync.rs  as_conversions.rs  asm_syntax.rs  assertions_on_constants.rs  assigning_clones.rs  attrs.rs  await_holding_invalid.rs  booleans.rs  borrow_deref_ref.rs  checked_conversions.rs  cloned_ref_to_slice_refs.rs  cognitive_complexity.rs  collapsible_if.rs  dbg_macro.rs  default.rs  dereference.rs  derivable_impls.rs  disallowed_macros.rs  disallowed_methods.rs  disallowed_names.rs  disallowed_script_idents.rs  disallowed_types.rs  duplicate_mod.rs  empty_line_after.rs  empty_with_brackets.rs  entry.rs  escape.rs  excessive_bools.rs  excessive_nesting.rs  explicit_write.rs  extra_unused_type_parameters.rs  float_literal.rs  format.rs  format_args.rs  format_impl.rs  (+128 more)
src/tools/clippy/clippy_lints/src/attrs/: allow_attributes.rs  duplicated_attributes.rs  mod.rs
src/tools/clippy/clippy_lints/src/cargo/: lint_groups_priority.rs  mod.rs
src/tools/clippy/clippy_lints/src/casts/: as_pointer_underscore.rs  mod.rs  unnecessary_cast.rs  zero_ptr.rs
src/tools/clippy/clippy_lints/src/derive/: mod.rs
src/tools/clippy/clippy_lints/src/doc/: broken_link.rs  doc_comment_double_space_linebreaks.rs  doc_suspicious_footnotes.rs  include_in_doc_without_cfg.rs  link_with_quotes.rs  markdown.rs  missing_headers.rs  mod.rs  needless_doctest_main.rs  suspicious_doc_comments.rs
src/tools/clippy/clippy_lints/src/functions/: misnamed_getters.rs  mod.rs
src/tools/clippy/clippy_lints/src/ifs/: mod.rs
src/tools/clippy/clippy_lints/src/loops/: manual_while_let_some.rs  mod.rs  mut_range_bound.rs
src/tools/clippy/clippy_lints/src/matches/: manual_unwrap_or.rs  manual_utils.rs  mod.rs  redundant_pattern_match.rs
src/tools/clippy/clippy_lints/src/methods/: cloned_instead_of_copied.rs  filter_map.rs  filter_map_bool_then.rs  implicit_clone.rs  inefficient_to_string.rs  iter_skip_zero.rs  manual_saturating_arithmetic.rs  manual_try_fold.rs  mod.rs  needless_as_bytes.rs  option_as_ref_deref.rs  read_line_without_trim.rs  seek_from_current.rs  seek_to_start_instead_of_rewind.rs  single_char_add_str.rs  string_lit_chars_any.rs  suspicious_map.rs  suspicious_to_owned.rs  unnecessary_iter_cloned.rs  unnecessary_lazy_eval.rs  unnecessary_map_or.rs  unnecessary_to_owned.rs
src/tools/clippy/clippy_lints/src/operators/: arithmetic_side_effects.rs  float_equality_without_abs.rs  mod.rs  numeric_arithmetic.rs
src/tools/clippy/clippy_lints/src/transmute/: mod.rs
src/tools/clippy/clippy_lints/src/types/: mod.rs
src/tools/clippy/clippy_lints/src/unit_types/: mod.rs  unit_arg.rs
src/tools/clippy/clippy_lints/src/utils/: attr_collector.rs  format_args_collector.rs
src/tools/clippy/clippy_lints/src/utils/internal_lints/: metadata_collector.rs
src/tools/clippy/clippy_utils/: Cargo.toml
src/tools/clippy/clippy_utils/src/: check_proc_macro.rs  higher.rs  hir_utils.rs  lib.rs  paths.rs  sugg.rs  ty.rs
src/tools/clippy/clippy_utils/src/mir/: possible_origin.rs  transitive_relation.rs
src/tools/clippy/clippy_utils/src/ty/: mod.rs
src/tools/clippy/clippy_utils/src/ty/type_certainty/: certainty.rs
src/tools/collect-license-metadata/: Cargo.toml
src/tools/compiletest/: Cargo.toml
src/tools/generate-copyright/: Cargo.toml
src/tools/html-checker/: Cargo.toml
src/tools/jsondoclint/: Cargo.toml
src/tools/lint-docs/: Cargo.toml
(+38 files in other folders)
