[package]
name = "rustc_driver"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["dylib", "rlib", "staticlib"]

[dependencies]
# tidy-alphabetical-start
rustc_driver_impl = { path = "../rustc_driver_impl" }
# tidy-alphabetical-end

[build-dependencies]
# tidy-alphabetical-start
rustc_windows_rc = { path = "../rustc_windows_rc" }
# tidy-alphabetical-end

[features]
default = ["clippy_lints"]
clippy_lints = [ "rustc_driver_impl/clippy_lints" ]
