[package]
name = "clippy_config"
version = "0.1.92"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
rustc_data_structures = { path = "../../../../compiler/rustc_data_structures" }
rustc_errors = { path = "../../../../compiler/rustc_errors" }
rustc_hir = { path = "../../../../compiler/rustc_hir" }
rustc_middle = { path = "../../../../compiler/rustc_middle" }
rustc_session = { path = "../../../../compiler/rustc_session" }
rustc_span = { path = "../../../../compiler/rustc_span" }

[dev-dependencies]
walkdir = "2.3"
