[package]
name = "clippy_lints"
version = "0.1.92"
description = "A bunch of helpful lints to avoid common pitfalls in Rust"
repository = "https://github.com/rust-lang/rust-clippy"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["clippy", "lint", "plugin"]
edition = "2024"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
cargo_metadata = "0.18"
clippy_config = { path = "../clippy_config" }
clippy_utils = { path = "../clippy_utils" }
declare_clippy_lint = { path = "../declare_clippy_lint" }
itertools = "0.12"
quine-mc_cluskey = "0.2"
regex-syntax = "0.8"
serde = { version = "1.0", features = ["derive"] }
unicode-normalization = "0.1"
unicode-script = { version = "0.5", default-features = false }
semver = "1.0"
url = "2.2"

rustc_abi = { path = "../../../../compiler/rustc_abi" }
rustc_arena = { path = "../../../../compiler/rustc_arena" }
rustc_ast = { path = "../../../../compiler/rustc_ast" }
rustc_ast_pretty = { path = "../../../../compiler/rustc_ast_pretty" }
rustc_data_structures = { path = "../../../../compiler/rustc_data_structures" }
rustc_driver = { path = "../../../../compiler/rustc_driver" }
rustc_errors = { path = "../../../../compiler/rustc_errors" }
rustc_hir = { path = "../../../../compiler/rustc_hir" }
rustc_hir_analysis = { path = "../../../../compiler/rustc_hir_analysis" }
rustc_hir_pretty = { path = "../../../../compiler/rustc_hir_pretty" }
rustc_hir_typeck = { path = "../../../../compiler/rustc_hir_typeck" }
rustc_index = { path = "../../../../compiler/rustc_index" }
rustc_infer = { path = "../../../../compiler/rustc_infer" }
rustc_lexer = { path = "../../../../compiler/rustc_lexer" }
rustc_lint = { path = "../../../../compiler/rustc_lint" }
rustc_middle = { path = "../../../../compiler/rustc_middle" }
rustc_parse = { path = "../../../../compiler/rustc_parse" }
rustc_parse_format = { path = "../../../../compiler/rustc_parse_format" }
rustc_resolve = { path = "../../../../compiler/rustc_resolve" }
rustc_session = { path = "../../../../compiler/rustc_session" }
rustc_span = { path = "../../../../compiler/rustc_span" }
rustc_target = { path = "../../../../compiler/rustc_target" }
rustc_trait_selection = { path = "../../../../compiler/rustc_trait_selection" }

[dependencies.toml]
version = "0.9.7"
default-features = false
# preserve_order keeps diagnostic output in file order
features = ["parse", "preserve_order"]

[dev-dependencies]
walkdir = "2.3"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(bootstrap)']