[package]
name = "clippy_utils"
version = "0.1.92"
edition = "2024"
description = "Helpful tools for writing lints, provided as they are used in Clippy"
repository = "https://github.com/rust-lang/rust-clippy"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["clippy", "lint", "utils"]
categories = ["development-tools"]

[dependencies]
arrayvec = { version = "0.7", default-features = false }
itertools = "0.12"
# FIXME(f16_f128): remove when no longer needed for parsing
rustc_apfloat = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
rustc_abi = { path = "../../../../compiler/rustc_abi" }
rustc_ast = { path = "../../../../compiler/rustc_ast" }
rustc_attr_parsing = { path = "../../../../compiler/rustc_attr_parsing" }
rustc_const_eval = { path = "../../../../compiler/rustc_const_eval" }
rustc_data_structures = { path = "../../../../compiler/rustc_data_structures" }
rustc_driver = { path = "../../../../compiler/rustc_driver" }
rustc_errors = { path = "../../../../compiler/rustc_errors" }
rustc_hir = { path = "../../../../compiler/rustc_hir" }
rustc_hir_analysis = { path = "../../../../compiler/rustc_hir_analysis" }
rustc_hir_typeck = { path = "../../../../compiler/rustc_hir_typeck" }
rustc_index = { path = "../../../../compiler/rustc_index" }
rustc_infer = { path = "../../../../compiler/rustc_infer" }
rustc_lexer = { path = "../../../../compiler/rustc_lexer" }
rustc_lint = { path = "../../../../compiler/rustc_lint" }
rustc_middle = { path = "../../../../compiler/rustc_middle" }
rustc_mir_dataflow = { path = "../../../../compiler/rustc_mir_dataflow" }
rustc_session = { path = "../../../../compiler/rustc_session" }
rustc_span = { path = "../../../../compiler/rustc_span" }
rustc_trait_selection = { path = "../../../../compiler/rustc_trait_selection" }